--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "react-portoderma",
-  "homepage": "https://github.com/muktiasixs.github.io/myportofolio",
+  "homepage": "https://muktiasixs.github.io/myportofolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@react-spring/web": "^10.0.3",
