--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
-    "react-type-animation": "^3.2.0"
+    "react-type-animation": "^3.2.0",
+    "vite": "^6.0.6"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
@@ -31,10 +32,7 @@
     "eslint-plugin-react-refresh": "^0.4.22",
     "globals": "^16.4.0",
     "postcss": "^8.5.6",
-    "tailwindcss": "^3.4.18",
-    "vite": "npm:rolldown-vite@7.1.14"
-  },
-  "overrides": {
-    "vite": "npm:rolldown-vite@7.1.14"
+    "tailwindcss": "^3.4.18"
   }
+  
 }
