--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-parallax-tilt": "^1.7.310",
     "react-type-animation": "^3.2.0",
     "vite": "^6.0.6"
   },
