--- a/package.json
+++ b/package.json
@@ -12,12 +12,15 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "@gsap/react": "^2.1.2",
     "@react-spring/web": "^10.0.3",
     "gh-pages": "^6.3.0",
+    "gsap": "^3.13.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
     "react-intersection-observer": "^9.16.0",
+    "react-native-web": "^0.21.2",
     "react-parallax-tilt": "^1.7.310",
     "react-type-animation": "^3.2.0",
     "vite": "^6.0.6"
